@@ -1,5 +1,8 @@
 2012-05-02  Jakub Jelinek  <jakub@redhat.com>
 
+	PR tree-optimization/53163
+	* gcc.c-torture/compile/pr53163.c: New test.
+
 	PR rtl-optimization/53160
 	* gcc.c-torture/execute/pr53160.c: New test.
 
